<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bil24.activity.AuthActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin" android:background="@color/toolbar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/auth_text_activity"
        android:text="@string/unlocking"
        android:id="@+id/activityAuthTv1" android:textColor="#ffffff" android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activityAuthPass" android:layout_below="@+id/activityAuthTv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/auth_text_activity"
        tools:text="*****" android:textColor="#ffffff" android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="3" android:orientation="horizontal">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number1"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral1" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number2"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral2" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity" android:background="@drawable/number_bg"
              android:layout_marginLeft="3dp" android:layout_marginRight="3dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number3"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral3" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
                      android:weightSum="3" android:orientation="horizontal">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number4"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral4" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number5"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral5" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg" android:layout_marginRight="3dp"
              android:layout_marginLeft="3dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number6"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral6" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="3" android:orientation="horizontal">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number7"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral7" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number8"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral8" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg" android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number9"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral9" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
                      android:weightSum="3" android:orientation="horizontal">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text=""
              android:textColor="#ffffff"
              android:id="@+id/textView11" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/number0"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvNumeral0" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg" android:layout_marginRight="3dp"
              android:layout_marginLeft="3dp"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/auth_text_height"
              android:text="@string/letter_delete"
              android:textColor="#ffffff"
              android:id="@+id/activityAuthTvDelete" android:layout_weight="1" android:gravity="center"
              android:textSize="@dimen/auth_text_activity"
              android:background="@drawable/number_bg_delete"/>
        </LinearLayout>
    </LinearLayout>
  </RelativeLayout>

</RelativeLayout>
