<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:padding="10dp">

  <com.rey.material.widget.TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/aboutFullName"
      android:id="@+id/fullNameDialogTextView"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
      android:layout_marginBottom="10dp" android:textSize="@dimen/city_dialog_text1"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/fullNameDialogEditTextKdp"
      android:text="" android:layout_below="@+id/fullNameDialogTextView"
      android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
      android:selectAllOnFocus="true"
      android:layout_marginTop="10dp"/>

  <com.rey.material.widget.Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dialog_cancel_button"
      android:padding="5dp"
      android:textColor="@color/toolbar"
      style="@style/DefaultButtonStyle"
      android:id="@+id/fullNameDialogButtonCancel1"
      android:layout_below="@+id/fullNameDialogEditTextKdp"
      android:layout_toLeftOf="@+id/fullNameDialogButtonOk" android:layout_marginTop="10dp"/>

  <com.rey.material.widget.Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dialog_button_ok"
      android:padding="5dp"
      android:textColor="@color/toolbar"
      style="@style/DefaultButtonStyle"
      android:id="@+id/fullNameDialogButtonOk"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/fullNameDialogEditTextKdp"
      android:layout_alignParentRight="true"/>
</RelativeLayout>